--- a/.github/workflows/api_flow.yml
+++ b/.github/workflows/api_flow.yml
@@ -30,7 +30,13 @@ jobs:
         python-version: '3.12'
 
     - name: Build image for API
+      run: docker build -t rest-api-app .
+
+    - name: Run API
+      run: docker run -p 5000:5000 rest-api-app
+
+    - name: Build image for testing API
       run: docker build -f Dockerfile.test -t rest-api-app-test .
 
-    - name: Run tests
+    - name: Run tests image
       run: docker run --rm rest-api-app-test
